# emltt

./: .gitignore  .ocamlinit  dune-project  emltt.opam  test.txt
lib/: dune  example.ml  nbe.ml  syntax.ml  test.txt  tyck.ml  work.ml
lib/mltt/: dune  syntax.ml  test.txt  work.ml
lib/simple/: dune  nbe.ml  syntax.ml  tyck.ml
test/: dune
